--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "3307:3306"
   springboot-docker-container:
-    image: springboot-docker-container
+    image: dockerfile
     ports:
       - "8082:8082"
     environment:
